[gd_scene load_steps=11 format=3 uid="uid://cjlwsm8l4xv7"]

[ext_resource type="Texture2D" uid="uid://bl6n26vkfe7y4" path="res://assets/textures/dummy/examplePlayer.png" id="1_bgu20"]
[ext_resource type="Script" uid="uid://dcrefagwi3ii7" path="res://scripts/asteroids.gd" id="1_bogip"]
[ext_resource type="Texture2D" uid="uid://bnvyglvs2hp87" path="res://assets/textures/visualisation game textures/Asteroids Textures/Background_space.png" id="2_daty3"]
[ext_resource type="Script" uid="uid://b23juy4p7slg5" path="res://scenes/Asteroids/asteroid_spawner.gd" id="3_daty3"]
[ext_resource type="Script" uid="uid://ctn3f5a3qvptd" path="res://scenes/Asteroids/ground.gd" id="5_ld5pd"]
[ext_resource type="Texture2D" uid="uid://ittob6p8kt7y" path="res://assets/textures/hero.png" id="6_w5nbj"]
[ext_resource type="PackedScene" uid="uid://b2miope68f6mo" path="res://objects/asteroids/asteroid_particles.tscn" id="7_ld5pd"]
[ext_resource type="AudioStream" uid="uid://kh83eyrpa0vc" path="res://assets/music/asteroids.wav" id="8_4fnbq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bogip"]
size = Vector2(1269, 145)

[sub_resource type="Curve2D" id="Curve2D_bogip"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -71, -266, 0, 0, 0, 0, 1105, -266)
}
point_count = 2

[node name="Asteroids" type="Node2D"]
position = Vector2(3, 240)
script = ExtResource("1_bogip")

[node name="BackgroundSpace" type="Sprite2D" parent="."]
position = Vector2(568.065, 5.49899)
scale = Vector2(0.655, 0.655)
texture = ExtResource("2_daty3")

[node name="AsteroidsCharacter" type="CharacterBody2D" parent="."]
position = Vector2(3, 0)

[node name="AsteroidSpawner" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 0)
script = ExtResource("3_daty3")

[node name="Ground" type="Area2D" parent="."]
position = Vector2(-15.9351, -239.501)
script = ExtResource("5_ld5pd")

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
position = Vector2(573, 616)
scale = Vector2(2.344, 0.112)
texture = ExtResource("1_bgu20")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(646.935, 508.501)
shape = SubResource("RectangleShape2D_bogip")

[node name="room" type="Area2D" parent="."]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(49, -174)
scale = Vector2(1, -0.0144928)
curve = SubResource("Curve2D_bogip")

[node name="spawn_position" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(14.1458, -266)
progress = 85.1504

[node name="character" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(30, 3)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_w5nbj")
flip_h = true

[node name="lazer0" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(0, 0, 0, 0)
width = 25.0
default_color = Color(1, 0, 0, 1)

[node name="AsteroidParticles" parent="." instance=ExtResource("7_ld5pd")]
unique_name_in_owner = true
amount = 100

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4fnbq")
autoplay = true
bus = &"Asteroid Music"

[connection signal="area_entered" from="Ground" to="Ground" method="_on_area_entered"]
[connection signal="destroy_asteroid" from="Ground" to="AsteroidSpawner" method="destroy_asteroid" binds= [false]]
